// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonRow /> should match snapshots 1`] = `
<ActionBar>
  <Button
    flat={true}
    focusable={true}
    label="Add with Identifier"
    onClick={[MockFunction]}
    type="button"
  />
  <Button
    disabled={true}
    flat={true}
    focusable={true}
    label="Search PubMed"
    onClick={[MockFunction]}
    type="button"
  />
  <Component />
  <ToggleSwitch
    checked={false}
    disabled={false}
    onChange={[MockFunction]}
    tooltip={
      Object {
        "position": "left",
        "text": "Insert citation inline",
      }
    }
  />
  <Button
    focusable={true}
    form="add-reference"
    label="Add Reference"
    primary={true}
    type="submit"
  />
</ActionBar>
`;

exports[`<ButtonRow /> should match snapshots 2`] = `
<ActionBar>
  <Button
    flat={true}
    focusable={true}
    label="Add Manually"
    onClick={[MockFunction]}
    type="button"
  />
  <Button
    disabled={false}
    flat={true}
    focusable={true}
    label="Search PubMed"
    onClick={[MockFunction]}
    type="button"
  />
  <Component />
  <ToggleSwitch
    checked={false}
    disabled={false}
    onChange={[MockFunction]}
    tooltip={
      Object {
        "position": "left",
        "text": "Insert citation inline",
      }
    }
  />
  <Button
    focusable={true}
    form="add-reference"
    label="Add Reference"
    primary={true}
    type="submit"
  />
</ActionBar>
`;
